--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,23 @@ if(CUDA_FOUND)
 
 	set ( CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} --ptxas-options=-v --use_fast_math 
 	--compiler-options -Wall -lopencvhighgui -lopencv_core )
+
+	include(ExternalProject)
+	ExternalProject_Add(
+		lmfit-6.1
+		SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lmfit-6.1
+		CONFIGURE_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lmfit-6.1/configure --prefix=${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lmfit-6.1
+		PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lmfit-6.1
+		BUILD_COMMAND make
+		BUILD_IN_SOURCE 1
+)
+		
 	
 
-	cuda_add_executable(sr src/main.cu src/helper.cu src/helper.h)
-
+	cuda_add_executable(sr src/main.cu src/helper.cu src/helper.h) 
 	target_link_libraries(sr ${CUDA_LIBARIES} ${OpenCV_LIBS})
 else()
 	message(CRITICAL_ERROR "CUDA cannot be found, please ensure CUDA dependencies are installed. CMake will exit now.")
 endif()
-
 
 
