--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ if(CUDA_FOUND)
 	include_directories(${OpenCV_INCLUDE_DIRS})
 	#find_package(libpng REQUIRED)
 
-	#specify binary name and source files to build
 
 	set ( CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} --ptxas-options=-v --use_fast_math 
 	--compiler-options -Wall -lopencvhighgui -lopencv_core )
@@ -22,11 +21,13 @@ if(CUDA_FOUND)
 		BUILD_COMMAND make
 		BUILD_IN_SOURCE 1
 )
-		
-	
+	#include lmfit dependencies
+	include_directories(3rdparty/lmfit-6.1/include)		
+	file(GLOB lm 3rdparty/lmfit-6.1/lib/*.so)
 
-	cuda_add_executable(sr src/main.cu src/helper.cu src/helper.h) 
-	target_link_libraries(sr ${CUDA_LIBARIES} ${OpenCV_LIBS})
+	#specify binary name and source files to build
+	cuda_add_executable(sr src/main.cu src/helper.cu src/helper.h ) 
+	target_link_libraries(sr ${lm}  ${CUDA_LIBARIES} ${OpenCV_LIBS})
 else()
 	message(CRITICAL_ERROR "CUDA cannot be found, please ensure CUDA dependencies are installed. CMake will exit now.")
 endif()
